hphp/test/zend/bad/ext-spl/SplObjectStorage_attach_invalid_parameter.php
<?php

$s = new SplObjectStorage();

var_dump($s->attach(true));
var_dump($s->attach(new stdClass, true, true));

?>